@@ -45,7 +45,8 @@ package TestCase {
     FLOAT_PRECICE = 16384.5f,
     DOUBLE_PRECICE = 65536.5,
   }
-  
+
+
   # Resorved word
   sub int($obj : TestCase) : int {
     
@@ -396,6 +397,15 @@ package TestCase {
     
     
     if ($@) {
+      return 1;
+    }
+    
+    return 0;
+  }
+
+  sub call_sub_undef($value : TestCase) : int {
+    
+    if ($value == undef) {
       return 1;
     }
     
